2005-11-17  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/punct_convcode.{h,cpp}, itpp/comm/convcode.h: Fixed
	bug [1358858]. Now it is possible to use decode_tailbite() method
	for a punctured code.

	* itpp/comm/channel.{h,cpp}: Fixed bug [1358861]. Now the
	destructor properly deletes the fading generators dynamically
	created.

2005-11-11  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/error_counters.{h,cpp}: BLERC class improved by adding
	setup and clear flags and non default constructor. Now it is
	possible to measure BLER for changing block sizes, e.g. in an
	adaptive transmission.

2005-11-10  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/channel.cpp: fixed a minor problem with documentation
	parsing by Doxygen (added a few lacking parentheses)

2005-10-17  Adam Piatyszek  <ediap@users.sourceforge.net>

	* Makefile.common: AM_CPPFLAGS fixed to support building in a
	separate directory (required by rpm-build) 

2005-10-16  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/local/*.doc: documentation files updated in order to release
	version 3.9.0

2005-10-14  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac: fixed a bug with ATLAS/BLAS library detection

	* doc/local/installation.doc: description updated to reflect
	recent changes in configuration process

	* itpp/*/*.{h,cpp}: cosmetic changes in copyright notes

2005-10-13  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac: fixed a problem with linking when using gcc-4.0.x
	with its gfortran compiler (tested on SuSE 10.0)

	* configure.ac: fixed a bug with proper detection of FFTW and
	LAPACK libraries when neither ATLAS nor CBLAS is installed

2005-10-12  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/stat.h: added `within_tolerance' function for double
	and complex<double> arguments and fixed minor documentation errors

2005-09-26  Johan Bergman  <emwjohb@users.sourceforge.net>
